integration onclick d'un item du recyclerview pour les projet afin de pouvoir voir les descriptions complète du projet et ajouter des tâches

--- a/app/src/main/res/layout/project_card.xml
+++ b/app/src/main/res/layout/project_card.xml
@@ -16,6 +16,7 @@
             app:cardCornerRadius="10dp">
 
             <RelativeLayout
+                android:id="@+id/layout_project_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -25,9 +26,10 @@
                     android:id="@+id/name_project"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/inter_bold"
+                    android:hint="Project_name"
                     android:textColor="@color/black"
                     android:textFontWeight="1000"
-                    android:fontFamily="@font/inter_bold"
                     android:textSize="20dp" />
 
                 <LinearLayout
