--- a/app/src/main/res/layout/activity_projectviewcontent.xml
+++ b/app/src/main/res/layout/activity_projectviewcontent.xml
@@ -12,6 +12,7 @@
         android:layout_height="55dp"
         android:foreground="@drawable/back"
         android:foregroundGravity="center"
+        android:onClick="returnFromTask"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
