--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,24 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Base application theme.Theme.MaterialComponents.DayNight.DarkActionBar -->
     <style name="Theme.StudentToDoList" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/black</item>
         <item name="colorPrimaryVariant">@color/theme_gold</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/white</item>
         <item name="colorOnSecondary">@color/white</item>
-        <!--
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        -->
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
         <!-- Customize your theme here. -->
         <item name="android:editTextColor">@color/black</item>
-
     </style>
 
     <style name="MyDatePickerStyle" parent="Theme.AppCompat.Light.Dialog">
@@ -43,4 +38,5 @@
         <!-- year-->
         <item name="android:textColorSecondaryInverse">@color/black</item>
     </style>
+
 </resources>
