--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,12 +11,12 @@
         <item name="colorSecondaryVariant">@color/white</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:editTextColor">@color/black</item>
     </style>
 
-    <style name="MyDatePickerStyle" parent="Theme.AppCompat.Light.Dialog"> //Theme pour les calendriers
+    <style name="MyDatePickerStyle" parent="Theme.AppCompat.Light.Dialog"> <!--Theme pour les calendriers-->
         <item name="colorAccent">@color/control_activated_calendar_night</item>
         <!--selected Item color-->
         <item name="colorControlActivated">@color/control_activated_calendar_night</item>
