--- a/app/src/main/res/layout/activity_projectviewcontent_edit.xml
+++ b/app/src/main/res/layout/activity_projectviewcontent_edit.xml
@@ -11,13 +11,13 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/content_topbar_VC"
+        android:id="@+id/content_topbar_VC_edit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/returnButton_VC"
+            android:id="@+id/returnButton_VC_edit"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="59dp"
             android:layout_height="55dp"
@@ -38,13 +38,13 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/editButton_VC"
+            android:id="@+id/validateButton_VC_edit"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="59dp"
             android:layout_height="55dp"
-            android:foreground="@drawable/edit"
+            android:foreground="@drawable/check_vector"
             android:foregroundGravity="center"
-            android:onClick="editProject" />
+            android:onClick="validateModifyProject" />
 
     </LinearLayout>
 
@@ -64,21 +64,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/returnButton_VC" /-->
 
-    <TextView
-        android:id="@+id/Name_project_VC_value"
+    <EditText
+        android:id="@+id/Name_project_VC_value_edit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="26dp"
         android:layout_marginRight="26dp"
-        android:hint="Project_Name_value"
+        android:hint="Enter Name"
         android:textColor="@color/black"
         android:textSize="25sp"
-        android:fontFamily="@font/inter_bold" />
+        android:fontFamily="@font/inter_bold"
+        android:textCursorDrawable="@color/black"/>
 
     <LinearLayout
-        android:id="@+id/content_deadline_VC"
+        android:id="@+id/content_deadline_VC_edit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -87,7 +88,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/Deadline_VC"
+            android:id="@+id/Deadline_VC_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Deadline :"
@@ -96,19 +97,23 @@
             android:textColor="@color/black"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/Deadline_VC_Value"
+        <EditText
+            android:id="@+id/Deadline_VC_Value_edit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:hint="Deadline_value"
+            android:hint="Enter deadline"
+            android:inputType="date"
+            android:ems="10"
+            android:focusableInTouchMode="false"
             android:textSize="20sp"
-            android:fontFamily="@font/inter_light" />
+            android:fontFamily="@font/inter_light"
+            android:onClick="modifyDeadline"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/content_description_VC"
+        android:id="@+id/content_description_VC_edit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -117,7 +122,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/Description_title_VC"
+            android:id="@+id/Description_title_VC_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description :"
@@ -126,18 +131,25 @@
             android:textColor="@color/black"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/Description_title_VC_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:fontFamily="@font/inter_light"
-            android:hint="Description_project_value"
-            android:textSize="16sp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout2"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/Description_title_VC_value_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:fontFamily="@font/inter_light"
+                android:hint="Description of project"
+                android:textCursorDrawable="@color/black"
+                android:textSize="16sp"/>
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/content_collab_VC"
+        android:id="@+id/content_collab_VC_edit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
@@ -145,7 +157,7 @@
         android:layout_marginRight="26dp"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/Collab_VC"
+            android:id="@+id/Collab_VC_edit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Collaborators of the Project :"
@@ -153,14 +165,33 @@
             android:drawableLeft="@drawable/add_collaborator"
             android:fontFamily="@font/inter_bold"
             android:textSize="20sp" />
-        <TextView
-            android:id="@+id/Collab_VC_value"
+        <LinearLayout
+            android:layout_marginTop="6dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:text="(no collaborators for this project)"
-            android:fontFamily="@font/inter_light"
-            android:textSize="16sp" />
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/Collab_VC_value_edit"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="10dp"
+                android:hint="E-mail"
+                android:fontFamily="@font/inter_light"
+                android:textSize="16sp"
+                android:textCursorDrawable="@color/black"/>
+
+            <Button
+                android:id="@+id/button_addcollab_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:text="Send"
+                android:textColor="@color/black"
+                android:onClick="inputmodifyEmail"/>
+        </LinearLayout>
+
     </LinearLayout>
 
     <View
@@ -168,31 +199,5 @@
         android:layout_height="2dp"
         android:layout_marginTop="12dp"
         android:background="#747474"/>
-
-    <LinearLayout
-        android:id="@+id/content_tasks_VC"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/tasks_VC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="26dp"
-            android:layout_marginRight="26dp"
-            android:text="Tasks to be done :"
-            android:fontFamily="@font/inter_bold"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_tasks_under_VC"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="1dp" />
-    </LinearLayout>
 
 </LinearLayout>
