--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -71,7 +71,8 @@
             android:id="@+id/task_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Task Name" />
+            android:hint="Task Name"
+            android:textCursorDrawable="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -117,7 +118,8 @@
             android:id="@+id/task_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Task Description" />
+            android:hint="Task Description"
+            android:textCursorDrawable="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
