--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -151,7 +151,7 @@
                 android:id="@+id/editProject_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Project Name
+                android:hint="Project Name"
                 android:textCursorDrawable="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
