--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -28,7 +28,7 @@
         android:onClick="addNewTask"
         app:cornerRadius="30dp" />
 
-    <Button
+    <!-- <Button
         android:id="@+id/clearTasksButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,6 +37,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginBottom="72dp"
         android:text="CLEAR ALL"
-        android:textColor="@color/black" />
+        android:textColor="@color/black" /> -->
 
 </RelativeLayout>
