Ajout commentaires sur les différents activité et changement mineures dans les activités de tâches (seul le nom d'une tache est requise pour sa création) + petit changement dans le xml fragment_tasks_item.xml

--- a/app/src/main/res/layout/fragment_tasks_item.xml
+++ b/app/src/main/res/layout/fragment_tasks_item.xml
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_regular"
                 android:textSize="16sp"
-                android:hint="Task_description" />
+                android:hint="(No description)" />
 
             <LinearLayout
                 android:id="@+id/task_sub_deadline"
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_regular"
                     android:textSize="16sp"
-                    android:hint="Deadline" />
+                    android:hint="(No Deadline)" />
             </LinearLayout>
         </LinearLayout>
 </LinearLayout>
