--- a/app/src/main/res/layout/activity_projectviewcontent_edit.xml
+++ b/app/src/main/res/layout/activity_projectviewcontent_edit.xml
@@ -173,7 +173,7 @@
 
             <EditText
                 android:id="@+id/Collab_VC_value_edit"
-                android:layout_width="230dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="10dp"
@@ -181,6 +181,9 @@
                 android:fontFamily="@font/inter_light"
                 android:textSize="16sp"
                 android:textCursorDrawable="@color/black"/>
+            <View android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/button_addcollab_edit"
