--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -6,7 +6,7 @@
     android:id="@+id/fragment_tasks"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.TasksFragment">
+    tools:context=".ui.tasks.TasksFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tasks"
