--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_tasks"
-        android:name="com.example.student_to_do_list.ui.home.TasksFragment"
+        android:name="com.example.student_to_do_list.ui.tasks.TasksFragment"
         android:label="@string/title_tasks"
         tools:layout="@layout/fragment_tasks" />
 
     <fragment
         android:id="@+id/navigation_projects"
-        android:name="com.example.student_to_do_list.ui.dashboard.ProjectsFragment"
+        android:name="com.example.student_to_do_list.ui.projects.ProjectsFragment"
         android:label="@string/title_projects"
         tools:layout="@layout/fragment_projects" />
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.student_to_do_list.ui.notifications.SettingsFragment"
+        android:name="com.example.student_to_do_list.ui.settings.SettingsFragment"
         android:label="@string/title_credit"
         tools:layout="@layout/fragment_settings" />
 </navigation>
